# mogan-specs

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
specs/ocata/approved/: lock-instance-api.rst
specs/pike/approved/: manage-existing-bms.rst  new-flavor.rst  node-aggregate.rst  server-group-api-extension.rst  track-resources-using-placement.rst  valence-integration.rst
specs/queens/: servers-tagging.rst
specs/queens/approved/: rsd-integration.rst  servers-tagging.rst  unmanage-existing-bms.rst
specs/stein/approved/: template.rst
tests/: test_directories.py  test_titles.py
