[metadata]
name = mogan-specs
summary = OpenStack Baremetal Computing Program Development Specifications
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://specs.openstack.org/openstack/mogan-specs/
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
builders = html
warning-is-error = 1

[pbr]
warnerrors = True

[wheel]
universal = 1
